code/lara03.txt
nohup: ignoring input
  File "./filtredGAModel.py", line 37
    region = nohup 'Kanto'
                         ^
SyntaxError: invalid syntax
